K8S/mssql-detoiserver-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-detoiserver-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mssql-detoiserver
  template:
    metadata:
      labels:
        app: mssql-detoiserver
    spec:
      containers:
        - name: mssql-detoiserver
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/detoiserver-data
            name: mssqldb-detoiserver
      volumes:
      - name: mssqldb-detoiserver
        persistentVolumeClaim:
          claimName: mssql-detoiserver-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-detoiserver-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: mssql-detoiserver
  ports: 
  - name: mssql-detoiserver
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-detoiserver-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql-detoiserver
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
