K8S/mssql-detoiserver-sfs.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-detoiserver
  labels:
    app: mssql-detoiserver
spec:
  serviceName: "mssql-detoiserver"
  replicas: 1
  selector:
    matchLabels:
      app: mssql-detoiserver
  template:
    metadata:
      labels:
        app: mssql-detoiserver
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: mssql-detoiserver
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
              name: tcpsql
          volumeMounts:
            - name: mssql
              mountPath: "/var/opt/mssql"
            - name: userdata
              mountPath: "/var/opt/mssql/userdata"
            - name: userlog
              mountPath: "/var/opt/mssql/userlog"
  volumeClaimTemplates:
    - metadata:
        name: mssql
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 200Mi
    - metadata:
        name: userdata
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
    - metadata:
        name: userlog
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-detoiserver-headless
spec:
  clusterIP: None
  selector:
    app: mssql-detoiserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-detoiserver-0
spec:
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: mssql-detoiserver-0
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
      name: tcpsql
