K8S/mssql-detoiserverpayment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-detoiserverpayment-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mssql-detoiserverpayment
  template:
    metadata:
      labels:
        app: mssql-detoiserverpayment
    spec:
      containers:
        - name: mssql-detoiserverpayment
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 2443
          volumeMounts:
          - mountPath: /var/opt/mssql/detoiserverpayment-data
            name: mssqldb-detoiserverpayment
      volumes:
      - name: mssqldb-detoiserverpayment
        persistentVolumeClaim: 
          claimName: mssql-detoiserverpayment-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-detoiserver-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: mssql-detoiserverpayment
  ports: 
  - name: mssql-detoiserverpayment
    protocol: TCP
    port: 2443
    targetPort: 2443
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-detoiserver-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql-detoiserverpayment
  ports:
  - protocol: TCP
    port: 2443
    targetPort: 2443
